1. Changed phone number to actionable link 2. Added title to lightbox 3. Changed font to Open Sans, fixed bolding 4. Minor cosmetic changes
YOU NEED TO FIX PAGE WIDTH. There shouldn't be any horizontal scrolling. Also fix first 3 column width.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,8 @@
 
 *{
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'CSPraJad','Open Sans', sans-serif;
     margin: 0rem;
-    
+
 }
 
 html, body{
@@ -47,7 +47,7 @@ body{
 }
 
 .height18{
-    height: 15rem;
+    height: 13rem;
 }
 
 .paddingtop4{
@@ -185,7 +185,7 @@ body{
 
 .body{
     padding-top: 3.5rem;
-    
+
 }
 
 .bg-gray{
@@ -302,7 +302,7 @@ body{
     color: white;
     border: none;
     padding: 0;
-    cursor: pointer; 
+    cursor: pointer;
     background-color: white;
     display: table-cell;
 }
@@ -426,4 +426,3 @@ body{
         padding-top: 3.5rem;
     }
 }
-
